kube/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doodle-prd
  labels:
    name: doodle-prd
